<resources>
    <string name="app_name">ConBuddy</string>
    <string name="app_version">Beta Build 16.10.11</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="view_room_schedule_button">See schedule</string>
    <string name="room_info_header">Upcoming Events in Next 24 Hours:</string>

    <string name="level_label">Level</string>

    <!-- Settings Strings-->
    <string name="title_activity_settings_example">SettingsExampleActivity</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_application_version">Application Version</string>

    <string-array name="pref_prior_notification_titles">
        <item>0 minutes before</item>
        <item>5 minutes before</item>
        <item>10 minutes before</item>
        <item>15 minutes before</item>
        <item>30 minutes before</item>
        <item>1 hour before</item>
    </string-array>
    <string-array name="pref_prior_notification_values">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string-array name="pref_sync_frequency_titles">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>-1</item>
    </string-array>


    <!-- Example settings for Notifications -->
    <string name="title_activity_splash">Splash</string>

    <string name="cardlib_hyperlink"><a href="https://github.com/gabrielemariotti/cardslib">CardsLib</a></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--CARD STRINGS-->
    <string name="header_title_subtitle_lbase">How to build a simple list</string>
    <string name="header_title_subtitle_ldiff">List with card with different layouts</string>
    <string name="header_title_subtitle_lexpand">List and expandable cards</string>
    <string name="header_title_subtitle_lgplay">A list like the Google Play &#8482;</string>
    <string name="header_title_subtitle_swipe">A list with the swipe and undo actions</string>
    <string name="header_title_subtitle_gbase">A basic grid</string>
    <string name="header_title_subtitle_ggplay">A Grid like the Google Play &#8482;</string>
    <string name="header_title_subtitle_lcolored">A list with colored cards</string>
    <string name="header_title_subtitle_lcursor">A list with Cursor</string>
    <string name="header_title_subtitle_gcursor">A grid with Cursor</string>

    <string name="header_title_group1">Card Base Features</string>
    <string name="header_title_group2">Card Examples</string>
    <string name="header_title_group3">List,Grid and RecyclerView</string>
    <string name="header_title_group4">Multichoice</string>
    <string name="header_title_group5">Misc</string>

    <string name="carddemo_title_list_expand">List with expandable card</string>

    <!--STATE ARRAYS-->
    <string name="state_prompt">State</string>
    <string-array name="state_codes">
        <item>Any</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string-array name="state_names">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>

    <!--Distances-->
    <string name="distance_prompt">Distance</string>
    <string-array name="distances">
        <item>5 miles</item>
        <item>10 miles</item>
        <item>25 miles</item>
        <item>50 miles</item>
        <item>100 miles</item>
        <item>250 miles</item>
        <item>500 miles</item>
    </string-array>


</resources>
